@@ -213,7 +213,7 @@ has dbh => (
                         "ALTER SESSION SET TIMESTAMP_OUTPUT_FORMAT='YYYY-MM-DD HH24:MI:SS'",
                         "ALTER SESSION SET TIMEZONE='UTC'",
                     );
-                    $dbh->do('USE SCHEMA ' . $self->registry)
+                    $dbh->do('USE SCHEMA ' . $dbh->quote_identifier($self->registry))
                         or $self->_handle_no_registry($dbh);
                     return;
                 },
@@ -299,9 +299,49 @@ sub _initialize {
         schema => $schema
     ) if $self->initialized;
 
-    $self->run_file( file(__FILE__)->dir->file('snowflake.sql') );
+    $self->run_upgrade(file(__FILE__)->dir->file('snowflake.sql') );
     $self->dbh->do("USE SCHEMA $schema");
     $self->_register_release;
+}
+
+# Determines whether we can create a schema and, if so, executes $file.
+# Otherwise creates and executes a copy of $file with schema commands removed.
+sub run_upgrade {
+    my ($self, $file) = @_;
+    try {
+        # Can we create a schema?
+        my $dbh = $self->dbh;
+        my $reg = $dbh->quote_identifier($self->registry);
+        $dbh->do("CREATE SCHEMA IF NOT EXISTS $reg");
+    } catch {
+        die $_ unless $DBI::state && $DBI::state eq '42501'; # ERRCODE_INSUFFICIENT_PRIVILEGE
+        # Cannot create schema; strip out schema stuff.
+        $file = $self->_strip_file($file);
+    };
+
+    # All good.
+    return $self->run_file($file);
+}
+
+# Creates and returns a copy of $file with C<CREATE SCHEMA> and C<COMMENT ON
+# SCHEMA> commands stripped out.
+sub _strip_file {
+    my ($self, $file) = @_;
+    my $in = $file->open('<:raw') or hurl io => __x(
+        'Cannot open {file}: {error}',
+        file  => $file,
+        error => $!
+    );
+
+    require File::Temp;
+    my $out = File::Temp->new;
+    while (<$in>) {
+        s/C(?:REATE|OMMENT ON) SCHEMA\b.+//;
+        print {$out} $_;
+    }
+
+    close $out;
+    return $out;
 }
 
 sub _no_table_error  {
